apps/nextcloud/metrics-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud-exporter
    app.kubernetes.io/part-of: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud-exporter
        app.kubernetes.io/part-of: nextcloud
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9205"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: exporter
          image: xperimental/nextcloud-exporter:0.9.1
          ports:
            - name: metrics
              containerPort: 9205
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud-exporter
    app.kubernetes.io/part-of: nextcloud
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9205
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: nextcloud-exporter
